--- a/package.json
+++ b/package.json
@@ -2,17 +2,28 @@
   "name": "finance",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "yarn@4.7.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "analyze": "cross-env ANALYZE=true next build"
+    "analyze": "cross-env ANALYZE=true next build",
+    "typecheck": "tsc --noEmit",
+    "lint": "next lint && npm run lint:stylelint",
+    "postinstall": "husky",
+    "lint:stylelint": "stylelint '**/*.css' --cache",
+    "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
+    "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,html,json,md,cjs}\"",
+    "test": "npm run prettier:check && npm run lint && npm run typecheck",
+    "prepare": "yarn dlx @yarnpkg/sdks"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@mantine/core": "^7.17.2",
+    "@mantine/form": "^7.17.2",
     "@mantine/hooks": "^7.17.2",
+    "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-query-devtools": "^5.69.0",
     "next": "15.2.3",
@@ -30,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "eslint-config-prettier": "^10.1.1",
+    "husky": "^8.0.0",
     "postcss": "^8.5.3",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
@@ -37,6 +49,5 @@
     "stylelint": "^16.16.0",
     "stylelint-config-standard-scss": "^14.0.0",
     "typescript": "^5"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
