--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,html,json,md,cjs}\"",
-    "test": "npm run prettier:check && npm run lint && npm run typecheck",
-    "prepare": "yarn dlx @yarnpkg/sdks"
+    "test": "npm run prettier:check && npm run lint && npm run typecheck"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
